Issue #215 - Tags page has overlapping tags with newer bigger tags

--- a/public/static/css/main.styl
+++ b/public/static/css/main.styl
@@ -172,7 +172,6 @@ a
 
 #tags
   display inline-block
-  margin-top: 6px;
   font-size 13pt
 
 #tags > span
@@ -180,19 +179,13 @@ a
   font-weight bold
   color #2c4f97
 
-#tags ul
-  float left
-  list-style none
-  margin-left 0
-  padding-left 0
-  margin-top 0
-
-#tags li
+.tag
   display inline
   margin-top 10px
   margin-left 10px
+  line-height 50px
 
-#tags li a
+.tag a
   padding 5px
   background-color #f9f9f9
   border-bottom 2px solid #999999
